<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.example.myapplication4.CentralFragment">
    <data>

        <variable
            name="centralViewModel"
            type="com.android.example.myapplication4.CentralViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@android:color/white">


        <ImageView
            android:id="@+id/backGround"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/holo_blue_dark"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/income_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <TextView
            android:id="@+id/income_head"
            style="@style/title_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:background="@drawable/box"
            android:includeFontPadding="false"
            android:padding="4sp"
            android:text="@string/income"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/income_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/balance_head"
            style="@style/title_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/box"
            android:includeFontPadding="false"
            android:padding="4sp"
            android:text="@string/balance"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expense_head"
            style="@style/title_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box"
            android:includeFontPadding="false"
            android:padding="4sp"
            android:text="@string/expense"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/balance_head"
            app:layout_constraintStart_toEndOf="@+id/income_head"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/income_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@{String.valueOf(centralViewModel.current.finalIncome)}"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/income_head"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/income_head"
            app:layout_constraintTop_toBottomOf="@+id/income_head" />

        <TextView
            android:id="@+id/expense_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:text="@{String.valueOf(centralViewModel.current.finalExpense)}"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/expense_head"
            app:layout_constraintStart_toStartOf="@+id/expense_head"
            app:layout_constraintTop_toBottomOf="@+id/expense_head" />

        <TextView
            android:id="@+id/balance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:text="@{String.valueOf(centralViewModel.current.finalBalance)}"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/balance_head"
            app:layout_constraintStart_toStartOf="@+id/balance_head"
            app:layout_constraintTop_toBottomOf="@+id/balance_head" />

        <Button
            android:id="@+id/button"
            android:layout_width="134dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="@{() -> centralViewModel.onClear()}"
            android:text="@string/clear"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            app:chainUseRtl="false"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doneButton">


            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{centralViewModel.transactionsString}" />
        </ScrollView>

        <Button
            android:id="@+id/transaction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="showPopup"
            android:padding="4dp"
            android:text="@string/transaction_button"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/addedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Enter Value"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/transaction_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/addedComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="Enter Remark"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/transaction_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/addedValue"
            app:layout_constraintTop_toBottomOf="@+id/addedValue" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_dark"
            android:padding="4sp"

            android:text="@string/done"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="@+id/addedComment"
            app:layout_constraintStart_toStartOf="@+id/addedComment"
            app:layout_constraintTop_toBottomOf="@+id/addedComment" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>